--- a/surpise-gift/index.html
+++ b/surpise-gift/index.html
@@ -49,13 +49,17 @@
                       </p>
                     </div>
                   </div>
-                <div id="clock-box">
-                    <span class="STYLE1"></span><font color="#33CC00">❤️ I Love You Wify ❤️ </font>
-                    <span class="STYLE1"></span><font color="#33CC00"></font>
-                  <div id="clock"></div>
-              </div>
-                <canvas id="canvas" width="1100" height="680"></canvas>
-            </div>
+<div id="clock-box">
+    <span class="STYLE1"></span>
+    <font color="#33CC00">
+        ❤️ I Love You Wify ❤️ <br>
+        Many More Days With You
+    </font>
+    <span class="STYLE1"></span>
+    <div id="clock"></div>
+</div>
+
+<canvas id="canvas" width="1100" height="680"></canvas>
             
         </div>
     
