--- a/surpise-gift/index.html
+++ b/surpise-gift/index.html
@@ -52,8 +52,7 @@
 <div id="clock-box">
     <span class="STYLE1"></span>
     <font color="#33CC00">
-        ❤️ I Love You Wify ❤️ <br>
-        ⏳ Many More Days With You !! 
+        ❤️ I Love You Wify ❤️ Many More Days With You ⏳ !! 
     </font>
     <span class="STYLE1"></span>
     <div id="clock"></div>
